# -

./: README.md
schedulemanager/: CMakeLists.txt  package-lock.json  package.json  server.js
schedulemanager  /include/: Task.h  Util.h
schedulemanager  /src/: AccountManager.cpp
schedulemanager/include/: AccountManager.h  TaskManager.h
schedulemanager/public/: index.html
schedulemanager/public/css/: styles.css
schedulemanager/public/js/: script.js
schedulemanager/src/: AccountManager.cpp  Task.cpp  TaskManager.cpp  Util.cpp  main.cpp
